# api-secret-word

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  reset_db.py  test_apis.py
app/: config.py  database.py  main.py  model.py
app/routers/: maker.py  pass_check.py  ttag.py  vtag.py
app/services/: database.py  db_service.py  image_service.py
app/utils/: response.py
